--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>This is an example project</h1>
+
+<script src="./js/task-1.js" defer type="module" ></script>
+<script src="./js/task-2.js" defer type="module"></script>
+<script src="./js/task-3.js" defer type="module"></script>
+
 </body>
 </html>
